Adds chatbot functionality for creating a new call with the api

--- a/client/index.html
+++ b/client/index.html
@@ -4,23 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Azure Communication Services - Simple voice calling app</title>
+  <title>Der 2 & 2 Service</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="container">
-    <h1>Azure Communication Services</h1>
-    <h2>Simple voice calling app</h2>
+    <h1>Der 2 & 2 Service</h1> 
+    <h2>Spreche mit unserem ChatBot</h2>
 
     <!-- Calling HTML here -->
     <div class="form-group">
-      <input id="token-input" type="text" placeholder="Your User access token" />
-      <button id="token-submit" type="button">Submit</button>
+      <button id="create-call" type="button">Einen Serviceanruf starten.</button>
     </div>
 
     <div class="form-group">
-      <button id="hang-up-button" type="button" disabled="true">Hang Up</button>
+      <button id="hang-up-button" type="button" disabled="true">Auflegen</button>
     </div>
   </div>
 
