--- a/client/index.html
+++ b/client/index.html
@@ -14,8 +14,15 @@
     <h2>Spreche mit unserem ChatBot</h2>
 
     <!-- Calling HTML here -->
+    <!--
+      <div class="form-group">
+      <label for="audio-input-select">Dein Audioinput:</label>
+      <select id="audio-input-select" disabled></select>
+    </div>
+  -->
+    <span id="loader"></span>
     <div class="form-group">
-      <button id="create-call" type="button">Einen Serviceanruf starten.</button>
+      <button id="create-call" type="button" disabled>Einen Serviceanruf starten</button>
     </div>
 
     <div class="form-group">
